Fix `ProjectCard` text overflow (#395)

--- a/frontend/src/components/ProjectCard/index.module.scss
+++ b/frontend/src/components/ProjectCard/index.module.scss
@@ -10,3 +10,23 @@
 .card:hover {
   text-decoration: none;
 }
+
+.cardText {
+  overflow:hidden;
+  text-overflow: ellipsis;
+  white-space:nowrap;
+}
+
+.cardDescription {
+  /*
+  `line-clamp` autoprefixing isn't supported yet, see https://github.com/postcss/autoprefixer/issues/1322.
+  */
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 4;
+  line-clamp: 4;
+  display: -webkit-box;
+  height: 96px;
+  word-wrap: break-word;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
